--- a/estacionamentoApp.csproj
+++ b/estacionamentoApp.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="packages\EntityFramework.6.3.0\build\EntityFramework.props" Condition="Exists('packages\EntityFramework.6.3.0\build\EntityFramework.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -30,6 +31,8 @@
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <TargetFrameworkProfile />
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -52,10 +55,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>packages\EntityFramework.6.3.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>packages\EntityFramework.6.3.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -84,13 +87,17 @@
     <Compile Include="DAL\SingletonContext.cs" />
     <Compile Include="DAL\VagaDAO.cs" />
     <Compile Include="DAL\ValorDAO.cs" />
-    <Compile Include="Migrations\201909251716333_db2509191416.cs" />
-    <Compile Include="Migrations\201909251716333_db2509191416.Designer.cs">
-      <DependentUpon>201909251716333_db2509191416.cs</DependentUpon>
+    <Compile Include="Migrations\201909290232386_db280920192330.cs" />
+    <Compile Include="Migrations\201909290232386_db280920192330.designer.cs">
+      <DependentUpon>201909290232386_db280920192330.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201909261454538_db260920191154.cs" />
-    <Compile Include="Migrations\201909261454538_db260920191154.Designer.cs">
-      <DependentUpon>201909261454538_db260920191154.cs</DependentUpon>
+    <Compile Include="Migrations\201909290337096_db290920190037.cs" />
+    <Compile Include="Migrations\201909290337096_db290920190037.designer.cs">
+      <DependentUpon>201909290337096_db290920190037.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201909290423374_db290920190123.cs" />
+    <Compile Include="Migrations\201909290423374_db290920190123.designer.cs">
+      <DependentUpon>201909290423374_db290920190123.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\Carro.cs" />
@@ -105,6 +112,9 @@
     <Compile Include="View\Cadastro\CadastroCarro.xaml.cs">
       <DependentUpon>CadastroCarro.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\Cadastro\CadastroVaga.xaml.cs">
+      <DependentUpon>CadastroVaga.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\Cadastro\CadastroValores.xaml.cs">
       <DependentUpon>CadastroValores.xaml</DependentUpon>
     </Compile>
@@ -114,8 +124,8 @@
     <Compile Include="View\Editar\EDCliente.xaml.cs">
       <DependentUpon>EDCliente.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\Editar\EDValores.xaml.cs">
-      <DependentUpon>EDValores.xaml</DependentUpon>
+    <Compile Include="View\EntradaVeiculo.xaml.cs">
+      <DependentUpon>EntradaVeiculo.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Listar\ListarCarros.xaml.cs">
       <DependentUpon>ListarCarros.xaml</DependentUpon>
@@ -125,6 +135,9 @@
     </Compile>
     <Compile Include="View\Listar\Vagas.xaml.cs">
       <DependentUpon>Vagas.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\TesteTela.xaml.cs">
+      <DependentUpon>TesteTela.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -146,6 +159,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\Cadastro\CadastroVaga.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\Cadastro\CadastroValores.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -158,7 +175,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\Editar\EDValores.xaml">
+    <Page Include="View\EntradaVeiculo.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -171,6 +188,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\Listar\Vagas.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\TesteTela.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -189,11 +210,14 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <EmbeddedResource Include="Migrations\201909251716333_db2509191416.resx">
-      <DependentUpon>201909251716333_db2509191416.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201909290232386_db280920192330.resx">
+      <DependentUpon>201909290232386_db280920192330.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201909261454538_db260920191154.resx">
-      <DependentUpon>201909261454538_db260920191154.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201909290337096_db290920190037.resx">
+      <DependentUpon>201909290337096_db290920190037.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909290423374_db290920190123.resx">
+      <DependentUpon>201909290423374_db290920190123.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -222,4 +246,12 @@
     </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>Este projeto faz referência a pacotes do NuGet que não estão presentes neste computador. Use a Restauração de Pacotes do NuGet para baixá-los.  Para obter mais informações, consulte http://go.microsoft.com/fwlink/?LinkID=322105. O arquivo ausente é {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('packages\EntityFramework.6.3.0\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\EntityFramework.6.3.0\build\EntityFramework.props'))" />
+    <Error Condition="!Exists('packages\EntityFramework.6.3.0\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\EntityFramework.6.3.0\build\EntityFramework.targets'))" />
+  </Target>
+  <Import Project="packages\EntityFramework.6.3.0\build\EntityFramework.targets" Condition="Exists('packages\EntityFramework.6.3.0\build\EntityFramework.targets')" />
 </Project>
