--- a/estacionamentoApp.csproj
+++ b/estacionamentoApp.csproj
@@ -87,9 +87,13 @@
     <Compile Include="DAL\SingletonContext.cs" />
     <Compile Include="DAL\VagaDAO.cs" />
     <Compile Include="DAL\ValorDAO.cs" />
-    <Compile Include="Migrations\201909291909462_db290920191609.cs" />
-    <Compile Include="Migrations\201909291909462_db290920191609.designer.cs">
-      <DependentUpon>201909291909462_db290920191609.cs</DependentUpon>
+    <Compile Include="Migrations\201910012229171_dbfinal.cs" />
+    <Compile Include="Migrations\201910012229171_dbfinal.designer.cs">
+      <DependentUpon>201910012229171_dbfinal.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201910012246495_dbFinal2.cs" />
+    <Compile Include="Migrations\201910012246495_dbFinal2.designer.cs">
+      <DependentUpon>201910012246495_dbFinal2.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\Carro.cs" />
@@ -118,6 +122,9 @@
     </Compile>
     <Compile Include="View\EntradaVeiculo.xaml.cs">
       <DependentUpon>EntradaVeiculo.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Listar\InformacoesGerais.xaml.cs">
+      <DependentUpon>InformacoesGerais.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Listar\ListarCarros.xaml.cs">
       <DependentUpon>ListarCarros.xaml</DependentUpon>
@@ -171,6 +178,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\Listar\InformacoesGerais.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\Listar\ListarCarros.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -202,8 +213,11 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <EmbeddedResource Include="Migrations\201909291909462_db290920191609.resx">
-      <DependentUpon>201909291909462_db290920191609.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201910012229171_dbfinal.resx">
+      <DependentUpon>201910012229171_dbfinal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910012246495_dbFinal2.resx">
+      <DependentUpon>201910012246495_dbFinal2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
